--- a/demo/index.html
+++ b/demo/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <title>shyftplan in a nutshell</title>
+    <link rel="stylesheet" href="app.css">
   </head>
   <body>
+
     <ul class="shiftplans"></ul>
     <ul class="shifts"></ul>
-    <script src="./shift.js"></script>
-    <script src="./shiftplan.js"></script>
+
     <script src="./app.js"></script>
   </body>
 </html>
