--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html><html><head><title>Lets talk about ... TypeScript by Tamino</title><meta charset="utf-8"><script src="slides.js"></script><link href="styles.css" rel="stylesheet" type="text/css"></head><body><section class="slides layout-regular template-default"><article><h2>Lets Talk about...</h2><h1>TypeScript</h1><h3>by Tamino</h3></article><article><h1>What is TypeScript?</h1></article><article><h2>What is TypeScript?</h2><ul class="build"><li>ES6+ with optional typings</li><li>Compiles to plain JavaScript</li><li>Open source language by Microsoft</li><li>Very good integration in VS Code</li></ul></article><article><h2>What is TypeScript?</h2><ul><li>ES6+ with optional typings</li><li>Compiles to plain JavaScript</li><li>Open source language by Microsoft</li><li>Very good integration in VS Code & others</li></ul></article><article><h1>Static typed languages</h1></article><article><h2>Static typed languages</h2><ul class="build"><li>Java<pre>String name = 'Tamino';</pre></li><li>C#<pre>string name = 'Tamino';</pre></li><li>Objective-C<pre>NSString name = 'Tamino';</pre></li></ul></article><article><h1>Optionally typed</h1></article><article><h2>Optionally typed</h2><ul class="build"><li>with type<pre>const name: string = 'Tamino';</pre></li><li>without type<pre>const name = 'Tamino';</pre></li><li>implies*<pre>const name: any = 'Tamino';</pre></li></ul></article><article><h2>Optionally typed</h2><ul><li>with type<pre>const name: string = 'Tamino';</pre></li><li>without type<pre>const name = 'Tamino';</pre></li><li>implies<pre>const name: string = 'Tamino';</pre></li></ul></article><article><h1>Why TypeScript?</h1></article><article><h2>Why TypeScript?</h2><ul class="build"><li>Productivity</li><li>Reliability</li></ul></article><article><h1>Productivity</h1></article><article><h1><a href="https://www.typescriptlang.org/play/index.html#src=function%20shiftplanPublishedMailer(employment)%20%7B%0D%0A%20%20%20%20console.log(%0D%0A%20%20%20%20%20%20%20%20employment.name%20%2B%20'%3C'%20%2B%20employment.email%20%2B%20'%3E'%0D%0A%20%20%20%20)%3B%0D%0A%7D%0D%0A">Demo</a></h1></article><article><h1>TypeScript Crash Course</h1></article><article class="section"><h1>Type Annotations</h1></article><article><h2>Basic Types</h2><ul class="build"><li>number<pre>const luckyNumber: number = 8;</pre></li><li>boolean<pre>const isActive: boolean = false;</pre></li><li>number<pre>const name: string = 'Tamino';</pre></li></ul></article><article><ul><li>number<pre>const luckyNumber: number = 8;</pre></li><li>boolean<pre>const isActive: boolean = false;</pre></li><li>number<pre>const name: string = 'Tamino';</pre></li><li>any<pre>const anyVar: any = FooBar;</pre></li></ul></article><article><h2>Multiple Types</h2><ul class="build"><li><pre>let param: string | undefined;</pre></li><li><pre>let param: string | undefined = 'foo';</pre></li><li><pre>let param: string | undefined = undefined;</pre></li><li><pre>let param: string | undefined = 8; // invalid</pre></li></ul></article><article><h2>Array Declarations</h2><ul class="build"><li>normal<pre>const shifts: Shift[];</pre></li><li>alternate<pre>const shifts: Array<Shift>;</pre></li><li>Multi Dimensional<pre>const shiftLists: Shift[][];</pre></li></ul></article><article><h2>Dictionaries</h2><ul class="build"><li><pre>const phoneBook: { [name: string]: string };</pre></li><li><pre>phoneBook['Tamino'] = '01577 3752563';</pre></li></ul></article><article><h2>Functions</h2><ul class="build"><li><pre>const callback: ( shifts: Shift[]) => void;</pre></li><li><pre>class Foo {
+<!DOCTYPE html><html><head><title>Lets talk about ... TypeScript by Tamino</title><meta charset="utf-8"><script src="slides.js"></script><link href="styles.css" rel="stylesheet" type="text/css"></head><body><section class="slides layout-regular template-default"><article><h2>Lets Talk about...</h2><h1>TypeScript</h1></article><article><h1>What is TypeScript?</h1></article><article><h2>What is TypeScript?</h2><ul class="build"><li>ES6+ with optional typings</li><li>Compiles to plain JavaScript</li><li>Open source language by Microsoft</li><li>Very good integration in VS Code</li></ul></article><article><h2>What is TypeScript?</h2><ul><li>ES6+ with optional typings</li><li>Compiles to plain JavaScript</li><li>Open source language by Microsoft</li><li>Very good integration in VS Code & others</li></ul></article><article><h1>Static typed languages</h1></article><article><h2>Static typed languages</h2><ul class="build"><li>Java<pre>String name = 'Tamino';</pre></li><li>C#<pre>string name = 'Tamino';</pre></li><li>Objective-C<pre>NSString name = 'Tamino';</pre></li></ul></article><article><h1>Optionally typed</h1></article><article><h2>Optionally typed</h2><ul class="build"><li>with type<pre>const name: string = 'Tamino';</pre></li><li>without type<pre>const name = 'Tamino';</pre></li><li>implies*<pre>const name: any = 'Tamino';</pre></li></ul></article><article><h2>Optionally typed</h2><ul><li>with type<pre>const name: string = 'Tamino';</pre></li><li>without type<pre>const name = 'Tamino';</pre></li><li>implies<pre>const name: string = 'Tamino';</pre></li></ul></article><article><h1>Why TypeScript?</h1></article><article><h1>Productivity</h1></article><article><h1>Reliability</h1></article><article><h1><a href="https://www.typescriptlang.org/play/index.html#src=function%20shiftplanPublishedMailer(receipient)%20%7B%0D%0A%20%20%20%20console.log(%0D%0A%20%20%20%20%20%20%20%20receipient.name%20%2B%20'%3C'%20%2B%20receipient.email%20%2B%20'%3E'%0D%0A%20%20%20%20)%3B%0D%0A%7D%0D%0A">Demo</a></h1></article><article class="section"><h1>TypeScript Overview</h1></article><article><h2>Basic Types</h2><ul class="build"><li>number<pre>const luckyNumber: number = 8;</pre></li><li>boolean<pre>const isActive: boolean = false;</pre></li><li>number<pre>const name: string = 'Tamino';</pre></li></ul></article><article><h2>Multiple Types</h2><ul class="build"><li><pre>let param: string | undefined;</pre></li><li><pre>let param: string | undefined = 'foo';</pre></li><li><pre>let param: string | undefined = undefined;</pre></li><li><pre>let param: string | undefined = 8; // 💩</pre></li></ul></article><article><h2>Combined Types</h2><ul class="build"><li><pre>type optionalString = string | undefined;
+let param: optionalString;
+let param?: string;</pre></li><li><pre>type vote = 'yay' | 'nay';</pre></li></ul></article><article><h2>Array Declarations</h2><ul class="build"><li>normal<pre>const shifts: Shift[];</pre></li><li>alternate<pre>const shifts: Array&lt;Shift&gt;;</pre></li><li>Multi Dimensional<pre>const shiftLists: Shift[][];</pre></li></ul></article><article><h2>Dictionaries</h2><ul class="build"><li><pre>const phoneBook: { [name: string]: string };</pre></li><li><pre>phoneBook['Tamino'] = '01577 3752563';</pre></li><li><pre>phoneBook['Tamino'] = 15773752563; // 💩</pre></li><li><pre>phoneBook[0] = '01577 3752563'; // 💩</pre></li></ul></article><article><h2>Dictionaries</h2><ul class="build"><li><pre>const phoneBook: {
+  emergency: string;
+  [name: string]: string;
+};</pre></li><li><pre>class Foo {
+  [key: string]: any;
+}</pre></li></ul></article><article><h2>Functions</h2><ul class="build"><li><pre>const callback: ( shifts: Shift[]) => void;</pre></li><li><pre>class Foo {
   bar(params: string[]): string { ... }
 }</pre></li></ul></article><article><h2>Function overloading</h2><ul class="build"><li><pre>class Foo {
   bar(params: string[]): string { ... }
-}</pre></li></ul></article><article><h2>Function overloading</h2><ul class="build"><li><pre>class Foo {
-  bar(params: string[]): string | number { ... }
-}</pre></li></ul></article><article><h2>Function overloading</h2><ul class="build"><li><pre>class Foo {
+}</pre></li></ul></article><article><h2>Function overloading</h2><ul><li><pre>type nuStr = number | str;
+class Foo {
+  bar(params: nuStr[]): nuStr { ... }
+}</pre></li></ul></article><article><h2>Function overloading</h2><ul><li><pre>class Foo {
   bar(params: string[]): string
   bar(params: number[]): number
   { ... }
@@ -23,32 +31,22 @@
 }</pre></li><li><pre>interface Employment extends IEmailable</pre></li><li><pre>class Employment implements IEmailable</pre></li></ul></article><article><ul><li><pre>interface IEmailable {
   name: string;
   email: string;
-}</pre></li><li><pre>interface Employment extends IEmailable</pre></li><li><pre>class Employment implements IEmailable</pre></li><li><pre>class A extends B implements D, E</pre></li></ul></article><article><h2>Enums</h2><ul class="build"><li><pre>enum Style {
+}</pre></li><li><pre>interface Employment extends IEmailable</pre></li><li><pre>class Employment implements IEmailable</pre></li><li><pre>class A extends B implements D, E</pre></li></ul></article><article><h2><a href="https://www.typescriptlang.org/play/index.html#src=enum%20Style%20%7B%0D%0A%20%20%20%20NONE%20%3D%200%2C%0D%0A%20%20%20%20BOLD%20%3D%201%2C%0D%0A%20%20%20%20ITALIC%20%3D%202%2C%0D%0A%20%20%20%20UNDERLINE%20%3D%204%2C%0D%0A%20%20%20%20EMPHASIS%20%3D%20Style.BOLD%20%7C%20Style.ITALIC%2C%0D%0A%20%20%20%20HYPERLINK%20%3D%20Style.BOLD%20%7C%20Style.UNDERLINE%2C%0D%0A%7D%0D%0A">Enums</a></h2><ul class="build"><li><pre>enum Style {
   NONE = 0,
   BOLD = 1,
-  ITALIC = 1,
-  UNDERLINE = 1,
+  ITALIC = 2,
+  UNDERLINE = 4,
   EMPHASIS = Style.BOLD | Style.ITALIC,
   HYPERLINK = Style.BOLD | Style.UNDERLINE,
-}</pre></li><li><pre>enum ShiftplanStatus {
-  New,
-  Published,
-}</pre></li></ul></article><article><ul><li><pre>enum Style {
-  NONE = 0,
-  BOLD = 1,
-  ITALIC = 1,
-  UNDERLINE = 1,
-  EMPHASIS = Style.BOLD | Style.ITALIC,
-  HYPERLINK = Style.BOLD | Style.UNDERLINE,
-}</pre></li><li><pre>enum ShiftplanStatus {
+}</pre></li></ul></article><article><h2><a href="https://www.typescriptlang.org/play/index.html#src=enum%20ShiftplanStatus%20%7B%0D%0A%20%20New%2C%0D%0A%20%20Published%2C%0D%0A%7D%0D%0A">Enums</a></h2><ul class="build"><li><pre>enum ShiftplanStatus {
   New,
   Published,
 }</pre></li></ul></article><article><h2>Get Enum Values</h2><ul class="build"><li><pre>const style: number = Style.ITALIC; // 2</pre></li><li><pre>let status: string;
 status = Status[Status.New]; // 'New'</pre></li></ul></article><article><h2>Modules</h2><ul class="build"><li><pre>module Shyftplan {
   export class Employment;
   ...
-}</pre></li></ul></article><article><h2>Generics</h2><ul class="build"><li><pre>interface Array<T> {
+}</pre></li></ul></article><article><h2>Generics</h2><ul class="build"><li><pre>interface Array&lt;T&gt; {
   ...
-  map<U>(cb: (value: T) => U): U[];
+  map&lt;U&gt;(cb: (value: T) => U): U[];
   ...
-}</pre></li></ul></article><article class="section"><h1>Thats it</h1></article><article><h2>How to Start?</h2><ul class="build"><li><a href="https://www.typescriptlang.org/play">Playground</a></li><li><pre>npm install typescript -g</pre></li><li><a href="https://tamino-martinius.github.io/lets-talk-about---typescript">Slides & demo</a></li></ul></article><article class="section"><h1>Questions?</h1></article></section><script src="scripts.js"></script></body></html>
+}</pre></li></ul></article><article class="section"><h1>Thats it</h1></article><article><h2>Whats next?</h2><ul class="build"><li><a href="https://www.typescriptlang.org/play">https://www.typescriptlang.org/play</a></li><li><a href="https://tamino-martinius.github.io/lets-talk-about---typescript">https://tamino-martinius.github.io/lets-talk-about---typescript</a></li><li><br><pre>npm install typescript -g</pre></li></ul></article><article class="section"><h1>Questions?</h1></article></section><script src="scripts.js"></script></body></html>
